make projects full width on mobile & fixed height

--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,11 @@ li {
 .grid-item {
   cursor: pointer;
   padding: 1rem;
-  margin: 1rem 0;
+  margin: 0.5rem;
   color: whitesmoke;
-  width: 500px !important;
-  height: 400px !important;
+  width: calc(100% - 2rem) !important;
+  min-height: 350px !important;
+  height: auto !important;
   opacity: 0.95;
   border-radius: 10px;
   background: #222;
@@ -58,7 +59,7 @@ li {
 ---------------------------------------- */
 .typewriter-section {
   background-image: url(/src/assets/images/static-black.gif);
-  padding-top: 30vh;
+  padding-top: 0vh;
 
 }
 
@@ -94,7 +95,16 @@ li {
   display: flex;
   justify-content: center;
   font-weight: bold;
-  margin-top: 2rem;
+  margin-top: 1rem;
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+}
+
+.project-img img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
 }
 
 .open-project-btn {
@@ -125,9 +135,13 @@ li {
   }
 
   .grid-item {
-    padding: 2rem;
+    width: calc(100% - 2rem) !important;
     margin: 1rem;
-    color: whitesmoke;
+    padding: 2rem;
+  }
+
+  .project-img {
+    max-height: 250px;
   }
 
   .nav-buttons {
@@ -142,10 +156,6 @@ li {
     margin-right: 1rem !important;
   }
 
-  .project-img {
-    max-width: 100%;
-    max-height: 15rem;
-  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -155,6 +165,8 @@ li {
   }
 }
 
-@media only screen and (min-width: 992px) {
-  /* Add styles for larger screens if needed */
+@media only screen and (min-width: 1200px) {
+  .grid-item {
+    width: 500px !important;
+  }
 }
