--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@media (max-width: 768px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
